@@ -21,6 +21,8 @@ add-auto-load-scripts-directory directory
 * GDB now supports access to vector registers on S/390 GNU/Linux
   targets.
 
+* GDB now supports the vector ABI on S/390 GNU/Linux targets.
+
 * GDB now honors the content of the file /proc/PID/coredump_filter
   (PID is the process ID) on GNU/Linux systems.  This file can be used
   to specify the types of memory mappings that will be included in a
